# NornikelKnowledgeMap

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.gpu.yaml  docker-compose.yaml  next.config.ts  package-lock.json  package.json  start-backend.bat  start-docker.bat  start-docker.sh  start-infra.bat  stop-backend.bat
nornikel-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  cli.py  docker-compose.yaml  main.py  pyproject.toml  run.py
nornikel-backend/configs/: ontology.yaml
nornikel-backend/scripts/: dedupe_entities.py  inspect_duplicates.py  repair_corrupted_entity_ids.py
nornikel-backend/src/: settings.py
nornikel-backend/src/api/: app.py  deps.py
nornikel-backend/src/domain/: entity_glossary.py  enums.py  material_taxonomy.py  ontology.py  property_labels.py  value_objects.py
nornikel-backend/src/infra/: embedding_client.py  extraction_limits.py  ingest_context.py  json_utils.py  llm_client.py  llm_refusal.py  llm_runtime.py  local_models.py  yandex_health.py  yandex_models.py
nornikel-backend/src/ingestion/: chunking.py  dedup.py  dedup_service.py  entity_dedupe.py  pipeline.py  upload_naming.py
nornikel-backend/src/search/: citations.py  context.py  document_scope.py  extractive_answer.py  (+7 more)
nornikel-backend/tests/: test_docx_ingest_quality.py  test_docx_page_estimate.py  test_experiment_text_scan.py  test_expert_extraction.py  test_ingest_routing.py  test_material_reclassify.py  test_pdf_table_extract.py  test_pdf_table_vlm.py  test_process_text_scan.py  test_yandex_health.py
(+87 files in other folders)
