[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "nornikelhack"
version = "0.1.0"
description = "R&D Knowledge Map API — ingest, graph, RAG"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "fastapi>=0.138.2",
    "pymupdf>=1.24.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.3.3",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "neo4j>=6.2.0",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "selectolax>=0.4.10",
    "typer>=0.26.8",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
]

[project.scripts]
serve = "api.app:app"
